--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   </head>
 
   <body>
-    <a href="/" class="d-block py-2 text-decoration-none system-link">
+    <!-- <a href="/" class="d-block py-2 text-decoration-none system-link">
       <p class="mb-0 fs-6 fw-lg-bold text-center text-white">
         RSNA 2023 registration is open！Come Visit Us
       </p>
-    </a>
+    </a> -->
     <!-- 手機版header↓ -->
     <nav class="navbar sticky-top bg-body-tertiary shadow-sm d-md-none">
       <div class="container-fluid">
