設備頁面加入

--- a/about-us.html
+++ b/about-us.html
@@ -103,11 +103,11 @@
                 About
               </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">Telemedicine</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#">Medical Eqouipments</a>
+              <a class="nav-link" href="./medical-equipments.html">Medical Equipments</a>
             </li>
             <li class="nav-item">
               <a
@@ -138,11 +138,11 @@
             />
           </a>
           <ul class="nav nav-pills">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a href="#" class="nav-link">Telemedicine</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a href="#" class="nav-link">Medical Eqouipments</a>
+              <a href="./medical-equipments.html" class="nav-link">Medical Equipments</a>
             </li>
             <li class="nav-item">
               <a href="./about-us.html" class="nav-link active">About</a>
@@ -197,6 +197,64 @@
         We bring practical know-how to the table, ready to deliver a diverse
         range of solutions that seamlessly integrate with smart healthcare.
       </p>
+    </div>
+    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 60px">
+      <div class="row">
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center ">
+          <img
+            src="./images/about/Brain CT AI Analytic.webp"
+            alt=""
+            class="img-thumbnail border-0 mb-2"
+          />
+          <p
+              class="px-4 py-1 text-center text-white fw-bold"
+              style="background-color: #7a9ccc; border-radius: 999px"
+            >
+              Brain CT AI Analytic
+            
+          </p>
+        </div>
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
+          <img
+            src="./images/about/Handheld Ultrasound.webp"
+            alt=""
+            class="img-thumbnail border-0 mb-2"
+          />
+          <p
+              class="px-4 py-1 text-center text-white fw-bold"
+              style="background-color: #b1d24c; border-radius: 999px"
+            >
+              Handheld Ultrasound
+            
+          </p>
+        </div>
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
+          <img
+            src="./images/about/Pediatric Bone Age X Ray System.webp"
+            alt=""
+            class="img-thumbnail border-0 mb-2"
+          />
+          <p
+            class="px-4 py-1 text-center text-white fw-bold"
+            style="background-color: #f26472; border-radius: 999px"
+          >
+            Pediatric Bone Age X Ray System
+          </p>
+        </div>
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
+          <img
+            src="./images/about/Portable X-Ray Machine.webp"
+            alt=""
+            class="img-thumbnail border-0 mb-2"
+          />
+          <p
+            class="px-4 py-1 text-center text-white fw-bold"
+            style="background-color: #59bfbd; border-radius: 999px"
+          >
+            Portable X-Ray Machine
+          </p>
+        </div>
+      </div>
     </div>
     <div class="container-xl" style="margin-bottom: 72px">
       <img src="./images/about/about-02.png" alt="" class="w-100" />
