--- a/index.html
+++ b/index.html
@@ -59,8 +59,119 @@
         RSNA 2023 registration is open！Come Visit Us
       </p>
     </a> -->
+    <!-- 手機版header↓ -->
+    <nav class="navbar sticky-top bg-body-tertiary shadow-sm d-md-none">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">
+          <img
+            src="./images/medalliance.svg"
+            alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care."
+            style="max-width: 80%"
+          />
+        </a>
+        <button
+          class="navbar-toggler btn-sm"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+      <div
+        class="offcanvas offcanvas-end"
+        tabindex="-1"
+        id="offcanvasNavbar"
+        aria-labelledby="offcanvasNavbarLabel"
+      >
+        <div class="offcanvas-header">
+          <!-- <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5> -->
+          <button
+            type="button"
+            class="btn-close ms-auto"
+            data-bs-dismiss="offcanvas"
+            aria-label="Close"
+          ></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 ps-4">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html" style="text-indent: -12px">
+                <i class="bi bi-caret-right-fill me-2"></i>
+                Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="./about-us.html"
+                
+              >
+               
+                About
+              </a>
+            </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="#">Telemedicine</a>
+            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="./medical-equipments.html">Medical Equipments</a>
+            </li>
+            <li class="nav-item">
+              <a
+                href="mailto:support@medalliance.com.tw?subject=Mail from Medalliance Site"
+                class="nav-link"
+              >
+                Contact
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- 手機版header↑ -->
+    <!-- 桌機版header↓ -->
+    <div
+      class="container-fluid sticky-top bg-body-tertiary d-none d-md-block shadow-sm"
+    >
+      <div class="container-xxl px-md-0">
+        <header class="d-flex flex-wrap justify-content-center py-3">
+          <a
+            href="./index.html"
+            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+          >
+            <img
+              src="./images/medalliance.svg"
+              alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care."
+            />
+          </a>
+          <ul class="nav nav-pills">
+            <!-- <li class="nav-item">
+              <a href="#" class="nav-link">Telemedicine</a>
+            </li> -->
+            <li class="nav-item">
+              <a href="./medical-equipments.html" class="nav-link">Medical Equipments</a>
+            </li>
+            <li class="nav-item">
+              <a href="./about-us.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a
+                href="mailto:support@medalliance.com.tw?subject=Mail from Medalliance Site"
+                class="nav-link"
+              >
+                Contact
+              </a>
+            </li>
+          </ul>
+        </header>
+      </div>
+    </div>
+    <!-- 桌機版header↑ -->
     <!-- 1208 navbar↓ -->
-    <nav
+    <!-- <nav
       class="navbar navbar-expand-lg fixed-top navbar-light "
       style="background-color: #ffffff"
     >
@@ -109,7 +220,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Medical Eouipments</a>
+              <a class="nav-link" href="#">Medical Equipments</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about-us.html">About</a>
@@ -120,7 +231,7 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav> -->
     <!-- 1208 navbar↑ -->
     <!-- hero↓ -->
     <!-- <div class="container-xxl px-0" style="margin-bottom: 60px">
@@ -254,7 +365,6 @@
     <!-- content↓ -->
     <div class="container-xxl" style="margin-bottom: 72px">
       <!-- telemedicine↓ -->
-
       <div class="item" style="margin-bottom: 32px">
         <div class="pic" data-aos="fade-right" data-aos-duration="2000">
           <img
@@ -381,7 +491,7 @@
       </div>
       <!-- 三張卡片↑ -->
       <!-- event↓ -->
-      <div
+      <!-- <div
         style="margin-right: -12px; margin-left: -12px"
         data-aos="zoom-in"
         data-aos-duration="1500"
@@ -398,16 +508,16 @@
           class="w-100 d-none d-md-block"
           style="margin-bottom: 60px"
         />
-      </div>
+      </div> -->
       <!-- event↑ -->
-      <!-- Medical Eqouipments↓ -->
+      <!-- Medical Equipments↓ -->
       <div class="item nth2 mb-3" style="overflow: hidden">
         <div
           class="content nth2"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
-          <h2>Medical Eqouipments</h2>
+          <h2>Medical Equipments</h2>
           <p>
             MedAlliance provides a comprehensive range of medical solutions,
             including top-tier personal protective gear, medical supplies, and
@@ -418,11 +528,11 @@
         <div class="pic" data-aos="fade-left" data-aos-duration="2000">
           <img
             src="./images/index/medicalEqouipments.webp"
-            alt="Medical Eqouipments:MedAlliance provides a comprehensive range of medical solutions, including top-tier personal protective gear, medical supplies, and diagnostic tools."
+            alt="Medical Equipments:MedAlliance provides a comprehensive range of medical solutions, including top-tier personal protective gear, medical supplies, and diagnostic tools."
           />
         </div>
       </div>
-      <!-- Medical Eqouipments↑ -->
+      <!-- Medical Equipments↑ -->
     </div>
     <div class="container-xxl d-md-none" style="margin-bottom: 60px">
       <div class="swiper swiperTest1">
