--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           <h2>Telemedicine</h2>
           <p>
             MedAlliance leads the way in healthcare innovation. Our telemedicine
-            solutons, IT solutions, mobile nursing, and patient infotainment
+            solutions, IT solutions, mobile nursing, and patient infotainment
             tools are revolutionizing patient care.
           </p>
           <!-- <button type="button" class="btn btn-secondary ">Secondary</button> -->
