--- a/medical-equipments.html
+++ b/medical-equipments.html
@@ -49,223 +49,173 @@
     <link rel="stylesheet" href="./custom/all.css" />
   </head>
 
-  <body>
-    <!-- 手機版header↓ -->
-    <nav class="navbar sticky-top bg-body-tertiary shadow-sm d-md-none">
+  <body
+    data-bs-spy="scroll"
+    data-bs-target="#navbarEquipments"
+    data-bs-offset="70"
+  >
+    <!-- 1212 navbar↓ -->
+    <nav
+      class="navbar navbar-expand-lg fixed-top navbar-light shadow-sm"
+      style="background-color: #ffffff"
+    >
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">
           <img
             src="./images/medalliance.svg"
             alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care."
-            style="max-width: 80%"
-          />
-        </a>
+        /></a>
         <button
-          class="navbar-toggler btn-sm"
+          class="navbar-toggler"
           type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasNavbar"
-          aria-controls="offcanvasNavbar"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-      </div>
-      <div
-        class="offcanvas offcanvas-end"
-        tabindex="-1"
-        id="offcanvasNavbar"
-        aria-labelledby="offcanvasNavbarLabel"
-      >
-        <div class="offcanvas-header">
-          <!-- <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5> -->
-          <button
-            type="button"
-            class="btn-close ms-auto"
-            data-bs-dismiss="offcanvas"
-            aria-label="Close"
-          ></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 ps-4">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./index.html">
-                Home
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about-us.html"> About </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item nav-pills">
+              <a class="nav-link px-3" aria-current="page" href="./index.html"
+                >Home</a
+              >
             </li>
             <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Telemedicine</a>
+              <a class="nav-link" href="#">Medical AI</a>
             </li> -->
-            <li class="nav-item">
+            <!-- <li class="nav-item dropdown">
               <a
-                class="nav-link active"
-                href="./medical-equipments.html"
-                style="text-indent: -12px"
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
               >
-                <i class="bi bi-caret-right-fill me-2"></i>Medical Equipments</a
+                Telemedicine
+              </a>
+              <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Mobile Nursing</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item" href="#">Hospital at Home</a></li>
+              </ul>
+            </li> -->
+            <li class="nav-item nav-pills dropdown" style="color: #595857">
+              <a
+                class="nav-link px-3 active dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
               >
+                Medical Equipments
+              </a>
+              <ul
+                class="dropdown-menu p-2"
+                aria-labelledby="navbarDropdown"
+                style="color: #595857"
+              >
+                <li>
+                  <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">
+                    Medical Devices And Equipments
+                  </p>
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./medical-equipments.html#Imaging_Solutions"
+                    ><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a
+                  >
+                </li>
+
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./medical-equipments.html#Patient_Analytics_Solutions"
+                    ><i class="bi bi-arrow-right-short"></i>Patient Analytics
+                    Solutions</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">
+                    Healthcare IT
+                  </p>
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./medical-equipments.html#Mobile_Nursing_Station"
+                    ><i class="bi bi-arrow-right-short"></i>Mobile Nursing
+                    Station</a
+                  >
+                </li>
+                <li>
+                  <p
+                    class="dropdown-item mb-0"
+                    href="./medical-equipments.html#Base_Telescoping"
+                  >
+                    <i class="bi bi-arrow-right-short"></i>Base Telescoping
+                  </p>
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a
+                    class="dropdown-item fw-bold"
+                    style="color: #ff8500"
+                    href="#"
+                    >Medical Supplies</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./medical-equipments.html#Masks"
+                    ><i class="bi bi-arrow-right-short"></i>Masks</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./medical-equipments.html#Gloves"
+                    ><i class="bi bi-arrow-right-short"></i>Gloves</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./medical-equipments.html#Alcohol_Prep_Pads"
+                    ><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./medical-equipments.html#Personal_Protective_Equipment"
+                    ><i class="bi bi-arrow-right-short"></i>Personal Protective
+                    Equipment</a
+                  >
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
-              <a
-                href="mailto:support@medalliance.com.tw?subject=Mail from Medalliance Site"
-                class="nav-link"
-              >
-                Contact
-              </a>
+              <a class="nav-link px-3" href="./about-us.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="#">Contact Us</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <!-- 手機版header↑ -->
-    <!-- 桌機版header↓ -->
-    <div
-      class="container-fluid sticky-top bg-body-tertiary d-none d-md-block shadow-sm"
-    >
-      <div class="container-xxl px-md-0">
-        <header class="d-flex flex-wrap justify-content-center py-3">
-          <a
-            href="./index.html"
-            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
-          >
-            <img
-              src="./images/medalliance.svg"
-              alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care."
-            />
-          </a>
-          <ul class="nav nav-pills">
-            <!-- <li class="nav-item">
-              <a href="#" class="nav-link">Telemedicine</a>
-            </li> -->
-            <li class="nav-item">
-              <a href="./medical-equipments.html" class="nav-link active"
-                >Medical Equipments</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="./about-us.html" class="nav-link">About</a>
-            </li>
-            <li class="nav-item">
-              <a
-                href="mailto:support@medalliance.com.tw?subject=Mail from Medalliance Site"
-                class="nav-link"
-              >
-                Contact
-              </a>
-            </li>
-          </ul>
-        </header>
-      </div>
-    </div>
-    <!-- 桌機版header↑ -->
-
-    <div
-      class="container-xxl mx-auto"
-      data-bs-spy="scroll"
-      data-bs-target="#navbar-equipments"
-    >
-      <nav
-        id="navbar-equipments"
-        class="navbar px-4"
-        style="background-color: white; position: relative"
-        role="navigation"
-      >
-        <ul
-          class="nav nav-pills"
-          style="
-            position: fixed;
-            top: 80px;
-            z-index: 1;
-            background-color: white;
-            position: fixed;
-            z-index: 1;
-          "
-        >
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-expanded="false"
-              >Medical Devices And Equipment</a
-            >
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="#Imaging_Solutions"
-                  >Imaging Solutions</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="#Patient_Analytics_Solutions"
-                  >Patient Analytics Solutions</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-expanded="false"
-              >Healthcare IT</a
-            >
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="#Mobile_Nursing_Station"
-                  >Mobile Nursing Station</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="#Base_Telescoping"
-                  >Base Telescoping</a
-                >
-              </li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a
-              class="nav-link dropdown-toggle"
-              data-bs-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-expanded="false"
-              >Medical Supplies</a
-            >
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="#Masks">Masks</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#Gloves">Gloves</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#Alcohol_Prep_Pads"
-                  >Alcohol Prep Pads</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="#Personal_Protective_Equipment"
-                  >Personal Protective Equipment</a
-                >
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-      <div
-        data-bs-spy="scroll"
-        data-bs-target="#navbar-equipments"
-        data-bs-offset="10"
-        class="scrollspy-example"
-        tabindex="0"
-        style="padding-top: 72px"
-      >
+    <!-- 1212 navbar↑ -->
+    <!-- hero↓ -->
+    <div class="container-xxl mx-auto">
+      <div id="navbarEquipments">
         <h4 id="Imaging_Solutions" style="color: #ff8500">Imaging Solutions</h4>
         <div class="row" style="border-top: 1px solid #828282">
           <div class="col-6 col-sm-3">
@@ -959,10 +909,11 @@
     </footer>
     <!-- footer↑  -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
