--- a/about-us.html
+++ b/about-us.html
@@ -198,7 +198,9 @@
               <a class="nav-link px-3 active" href="./about-us.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="#">Contact Us</a>
+              <a class="nav-link px-3" href="mailto:support@medalliance.com.tw"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
